added wise and cheese and alumini speed networking events

--- a/events.html
+++ b/events.html
@@ -122,6 +122,75 @@
                         <div class="card d-flex flex-row align-items-center">
                             <div class="card-block">
                                 <!-- Card Content -->
+                                <h4 class="card-title">November 6th 2025</h4>
+                                <div class="card-header">
+                                    <h3>Alumini Speed Networking</h3>
+                                </div>
+                                <p>
+                                    Join us for an inspiring evening of meaningful connections and career insights at the WISE Alumni Speed Networking & Panel! ✨
+
+​                                    This event brings together current students and accomplished WISE alumni from a range of fields — including tech, data analytics, 
+                                    AI & machine learning, research, and higher education for a night of mentorship, learning, and community.
+
+                                </p>
+                                <!-- Button -->
+                                <a href="https://luma.com/kpt18eam" target="_blank" class="btn-current"
+                                    data-date="2025-11-6">Register Here!</a>
+                                <!-- Tags -->
+                                <div class="tags">
+                                    <span class="tag-highschool">University</span>
+                                    <span class="tag-science">Science</span>
+                                    <span class="tag-tech">Tech</span>
+                                    <span class="tag-engineering">Engineering</span>
+                                </div>
+                            </div>
+                            <!-- Image  -->
+                            <div class="image-container">
+                                <img src="img/events/ASN1.png" class="img-fluid" alt="comm-outreach">
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="row flex-items-lg-middle flex-items-lg-center">
+                    <div class="col-lg-12 col-lg-6 mx-auto d-block wow bounceInUp" data-wow-duration="1.4s">
+                        <div class="card d-flex flex-row align-items-center">
+                            <div class="card-block">
+                                <!-- Card Content -->
+                                <h4 class="card-title">November 21st 2025</h4>
+                                <div class="card-header">
+                                    <h3>WISE & Cheese</h3>
+                                </div>
+                                <p>
+                                    Get ready for Fall WISE & Cheese 🧀🍷, an event designed to connect YOU with company reps from the likes of Amazon Robotics, 
+                                    AMD, Intuit, and more! This is your chance to expand your professional network and gain fantastic insights into the recruitment process. 
+                                    Students from all years and programs are welcome to attend, so sign up before spots run out! Registration is due by November 10th ‼️#WISEandCheese #Networking
+
+                                </p>
+                                <!-- Button -->
+                                <a href="https://luma.com/5mg62w24" target="_blank" class="btn-current"
+                                    data-date="2025-11-10">Register Here!</a>
+                                <!-- Tags -->
+                                <div class="tags">
+                                    <span class="tag-highschool">University</span>
+                                    <span class="tag-science">Science</span>
+                                    <span class="tag-tech">Tech</span>
+                                    <span class="tag-engineering">Engineering</span>
+                                </div>
+                            </div>
+                            <!-- Image  -->
+                            <div class="image-container">
+                                <img src="img/events/wac.png" class="img-fluid" alt="comm-outreach">
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="row flex-items-lg-middle flex-items-lg-center">
+                    <div class="col-lg-12 col-lg-6 mx-auto d-block wow bounceInUp" data-wow-duration="1.4s">
+                        <div class="card d-flex flex-row align-items-center">
+                            <div class="card-block">
+                                <!-- Card Content -->
                                 <h4 class="card-title">November 5th 2025</h4>
                                 <div class="card-header">
                                     <h3>Spilling the Tea on Research</h3>
