edited team page

--- a/our-team.html
+++ b/our-team.html
@@ -260,7 +260,7 @@
                             <!--<img src="img/team/Tiffanie Li 1.jpeg" class="img-fluid"
                             onmouseover="this.src='img/team/Tiffanie Li 2.jpeg';"
                             onmouseout="this.src='img/team/Tiffanie Li 1.jpeg';">-->
-                            <img src="img/no-image.png" class="img-fluid">
+                            <img src="img/team-2025/NyelaModrek.jpg" class="img-fluid">
                             <div class="member-info">
                                 <div class="member-info-content">
                                     <h4>Nyela Modrek</h4>
@@ -305,7 +305,7 @@
                             <!--<img src="img/team-2021/Armita Doost 1.jpg" class="img-fluid"
                             onmouseover="this.src='img/team-2022/Armita Doost 2.jpg';"
                             onmouseout="this.src='img/team-2021/Armita Doost 1.jpg';">-->
-                            <img src="img/team-2025/" class="img-fluid">
+                            <img src="img/team-2025/VivianChiang.png" class="img-fluid">
                             <div class="member-info">
                                 <div class="member-info-content-long">
                                     <h4>Vivian Chiang</h4>
@@ -411,7 +411,7 @@
                             <!--<img src="img/team-2022/Talia Yawney 1.jpg" class="img-fluid"
                             onmouseover="this.src='img/team-2022/Talia Yawney 2.jpg';"
                             onmouseout="this.src='img/team-2022/Talia Yawney 1.jpg';">-->
-                            <img src="img/no-image.png" class="img-fluid">
+                            <img src="img/team-2025/Kiah.jpg" class="img-fluid">
                             <div class="member-info">
                                 <div class="member-info-content">
                                     <h4>Mikiah Hall</h4>
@@ -973,7 +973,7 @@
                             <!--img src="img/team-2022/Micol Altomare 1.png" class="img-fluid"
                         onmouseover="this.src='img/team-2022/Micol Altomare 2.jpg';"
                         onmouseout="this.src='img/team-2022/Micol Altomare 1.png';">-->
-                            <img src="img/no-image.png" class="img-fluid">
+                            <img src="img/team-2025/Tooba_jalal_headshot.jpg" class="img-fluid">
                             <div class="member-info">
                                 <div class="member-info-content">
                                     <h4>Tooba Jalal</h4>
@@ -1212,28 +1212,6 @@
                     </div>
 
                     <div class="col-lg-4 col-md-4 col-sm-6">
-                        <div class="member" data-toggle="modal" data-target="#dianaj">
-                            <!-- <img src="img/team-2022/Anne Huynh 1.jpg" class="img-fluid"
-                        onmouseover="this.src='img/team-2022/Anne Huynh 2.jpg';"
-                        onmouseout="this.src='img/team-2022/Anne Huynh 1.jpg';">-->
-                            <img src="img/no-image.png" class="img-fluid">
-                            <div class="member-info">
-                                <div class="member-info-content-long">
-                                    <h4>Diana Jung</h4>
-                                    <span>Outreach Special Events Director</span>
-                                    <!-- <h5>Computer Science</h5>
-                                    <div class="social">
-                                        <a href="mailto:outreach.events@wise.skule.ca"><i
-                                                class="fa fa-envelope"></i></a>
-                                        <a href="https://www.linkedin.com/in/1zhaohel/" target="_blank"><i
-                                                class="fa fa-linkedin"></i></a>
-                                    </div> -->
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-
-                    <div class="col-lg-4 col-md-4 col-sm-6">
                         <div class="member" data-toggle="modal" data-target="#gracel">
                             <!--<img src="img/team-2022/Lina Jin 1.png" class="img-fluid"
                         onmouseover="this.src='img/team-2022/Lina Jin 2.jpg';"
@@ -1263,7 +1241,7 @@
                             <img src="img/team-2025/HyeonjiJung.jpg" class="img-fluid">
                             <div class="member-info">
                                 <div class="member-info-content-long">
-                                    <h4>Hyeonji Jung</h4>
+                                    <h4>Hyeonji(Diana) Jung </h4>
                                     <span>Outreach Special Events Director</span>
                                     <!-- <h5>Laboratory Medicine and Pathobiology</h5>
                                     <div class="social">
